--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="container-photo">
-                <img src="/Assets/young-woman-pura-ulun-danu-bratan-bali.png" alt="">
+                <img src="young-woman-pura-ulun-danu-bratan-bali.png" alt="">
 
             </div>
     </main>
@@ -48,19 +48,19 @@
         </div>
         <div class="box-partner">
             <div class="flex-item">
-                <img src="/Assets/Airbnb.png" alt="">
+                <img src="Airbnb.png" alt="">
             </div>
             <div class="flex-item">
-                <img src="/Assets/Traveloka.png" alt="">
+                <img src="Traveloka.png" alt="">
             </div>
             <div class="flex-item">
-                <img src="/Assets/Agoda.png" alt="">
+                <img src="Agoda.png" alt="">
             </div>
             <div class="flex-item">
-                <img src="/Assets/Tripadvisor.png" alt="">
+                <img src="Tripadvisor.png" alt="">
             </div>
             <div class="flex-item">
-                <img src="/Assets/Booking.com.png" alt="">
+                <img src="Booking.com.png" alt="">
             </div>
         </div>
 
@@ -73,7 +73,7 @@
 
         <div class="box-package">
             <div class="box">
-                <img class="photo" src="/Assets/explore-bali.jpg" alt="">
+                <img class="photo" src="explore-bali.jpg" alt="">
                 <h3>Explore Bali</h3>
                 <p>4 Hari/3 malam</p>
                 <br>
@@ -90,7 +90,7 @@
                 <button>Pesan Sekarang</button>
             </div>
             <div class="box">
-                <img class="photo" src="/Assets/adventure-bali.jpg" alt="">
+                <img class="photo" src="adventure-bali.jpg" alt="">
                 <h3>Adventure Bali</h3>
                 <p>5 Hari/4 Malam</p>
                 <br>
@@ -107,7 +107,7 @@
                 <button>Pesan Sekarang</button>
             </div>
             <div class="box">
-                <img class="photo" src="/Assets/bali-honeymoon.jpg" alt="">
+                <img class="photo" src="bali-honeymoon.jpg" alt="">
                 <h3>Bali Honeymoon</h3>
                 <p>6 Hari/5 Malam</p>
                 <br>
@@ -134,7 +134,7 @@
 
     <div class="container-1">
         <div class="container-photo-1">
-            <img src="/Assets/scenic-view-sea-against-sky.jpg" alt="">
+            <img src="scenic-view-sea-against-sky.jpg" alt="">
         </div>
         <div class="text-right">
             <h1>Explore Paket Teratas Kami</h1>
@@ -155,7 +155,7 @@
                 <button>Jelajahi Sekarang</button>
             </div>
             <div class="container-photo-2">
-                <img src="/Assets/spiritual-bali-ulun-danu-temple-bratan-lake.jpg" alt="">
+                <img src="spiritual-bali-ulun-danu-temple-bratan-lake.jpg" alt="">
             </div>
         </div>
     </main>
@@ -166,34 +166,34 @@
         </div>
         <div class="container-gallery">
             <div class="flex-item">
-                <img src="/Assets/gallery-image1.jpg" alt="">
+                <img src="gallery-image1.jpg" alt="">
             </div>
             <div class="flex-item">
-                <img src="/Assets/gallery-image2.jpg" alt="">
+                <img src="gallery-image2.jpg" alt="">
             </div>
             <div class="flex-item">
-                <img src="/Assets/gallery-image3.jpg" alt="">
+                <img src="gallery-image3.jpg" alt="">
             </div>
             <div class="flex-item">
-                <img src="/Assets/gallery-image4.jpg" alt="">
+                <img src="gallery-image4.jpg" alt="">
             </div>
             <div class="flex-item">
-                <img src="/Assets/gallery-image5.jpg" alt="">
+                <img src="gallery-image5.jpg" alt="">
             </div>
             <div class="flex-item">
-                <img src="/Assets/gallery-image6.jpg" alt="">
+                <img src="gallery-image6.jpg" alt="">
             </div>
             <div class="flex-item">
-                <img src="/Assets/gallery-image7.jpg" alt="">
+                <img src="gallery-image7.jpg" alt="">
             </div>
             <div class="flex-item">
-                <img src="/Assets/gallery-image8.jpg" alt="">
+                <img src="gallery-image8.jpg" alt="">
             </div>
             <div class="flex-item">
-                <img src="/Assets/gallery-image9.jpg" alt="">
+                <img src="gallery-image9.jpg" alt="">
             </div>
             <div class="flex-item">
-                <img src="/Assets/gallery-image10.jpg" alt="">
+                <img src="gallery-image10.jpg" alt="">
             </div>
         </div>
     </main>
@@ -234,19 +234,19 @@
         </div>
         <div class="box-package">
             <div class="box2">
-                <img class="photo-customer" src="/Assets/customer1.jpg" alt="">
+                <img class="photo-customer" src="customer1.jpg" alt="">
                 <p>"The <b>Bali Bliss Travel</b> tour package is truly extraordinary: I truly enjoyed every moment of my
                     trip. "</p>
                 <h3>John Doe</h3>
             </div>
             <div class="box2">
-                <img class="photo-customer" src="/Assets/customer2.jpg" alt="">
+                <img class="photo-customer" src="customer2.jpg" alt="">
                 <p>"The destinations chosen art very interesting, beautiful views and friendly service"</p>
                 <br>
                 <h3>Jane Doe</h3>
             </div>
             <div class="box2">
-                <img class="photo-customer" src="/Assets/customer3.jpg" alt="">
+                <img class="photo-customer" src="customer3.jpg" alt="">
                 <p>"I am very satisfied with the tour package from <b>Bali Bliss Travel.</b> Amazing experience! "</p>
                 <h3>Michael Smith</h3>
             </div>
